--- a/Makefile.in
+++ b/Makefile.in
@@ -44,7 +44,7 @@ re: clean all
 $(OBJS): $(UI_H)
 
 %.o: %.cpp
-	$(CC) $(CPPFLAGS) $(CFLAGS) -DVER=\"$(VERSION)\" -DPREFIX=\"@prefix@/share/xca\" -c $< -o $@
+	$(CC) $(CPPFLAGS) $(CFLAGS) -c $< -o $@
 
 xca: $(OBJS) lib/libxcadb.a lib/libpki.a
 	$(CC) $(LDFLAGS) $(OBJS) $(LIBS) -o xca
@@ -75,10 +75,11 @@ dist:
 	
 install: xca
 	strip xca
-	install -m 755 -o root -g root xca $(DESTDIR)@prefix@/bin
-	install -m 755 -o root -g root -d $(DESTDIR)@prefix@/share/xca
-	install -m 644 -o root -g root img/*.png $(DESTDIR)@prefix@/share/xca
-	install -m 644 -o root -g root xca_??.qm $(DESTDIR)@prefix@/share/xca
+	install -m 755 -o root -g root xca $(prefix)@prefix@/bin
+	install -m 755 -o root -g root -d $(prefix)@prefix@/share/xca
+	install -m 644 -o root -g root img/*.png $(prefix)@prefix@/share/xca
+	install -m 644 -o root -g root img/icon.xpm $(prefix)@prefix@/share/xca
+	install -m 644 -o root -g root xca_??.qm $(prefix)@prefix@/share/xca
 	
 
 moc_%.cpp: %.h %.cpp
