--- a/lib/base.h.in
+++ b/lib/base.h.in
@@ -1,7 +1,9 @@
 /* base definitions */
 
 #ifdef WIN32
-#define VER "0.2.12-W32"
+#define VER "0.2.13-PRE1-W32"
+#else
+#define VER "@PACKAGE_VERSION@"
 #endif
 
 #define MARK CERR("--Mark--")
@@ -13,5 +15,5 @@
 #define CERR(x)
 #endif
 
-
+#define PREFIX "@prefix@/share/xca"
 #define XCA_TITLE "X Certifikate and Key management"
