--- a/configure.ac
+++ b/configure.ac
@@ -52,14 +52,14 @@ AC_LANG(C)
 AC_CHECK_LIB([crypto], [atexit], , [AC_MSG_ERROR([OpenSSL libraries not found, try installing openssl-dev or look at www.openssl.org])])
 AC_CHECK_LIB([stdc++], [atexit], , [AC_MSG_ERROR([standard C++ library not found...])])
 LDB=X
-AC_CHECK_LIB([db4_cxx], [atexit], ,[LDB=${LDB}y] )
+AC_CHECK_LIB([db4_cxx], [atexit], ,[LDB=${LDB}no] )
 if test "$LDB" != X; then
 LDB=X
-AC_CHECK_LIB([db3_cxx], [atexit], ,[LDB=${LDB}y] )
+AC_CHECK_LIB([db3_cxx], [atexit], ,[LDB=${LDB}no] )
 fi
 if test "$LDB" != X; then
 LDB=X
-AC_CHECK_LIB([db_cxx], [atexit], ,[LDB=${LDB}y] )
+AC_CHECK_LIB([db_cxx], [atexit], ,[LDB=${LDB}no] )
 fi
 
 LQT=y
@@ -91,7 +91,7 @@ fi], )
 AC_CONFIG_FILES([Makefile lib/Makefile results lib/base.h])
 AC_OUTPUT
 
-if test "$LDB" == X; then
+if test "$LDB" != X; then
 	AC_MSG_NOTICE([C++ extension library to Berkeley db not found, try installing libdb_cxx-dev])
 fi
 if test "$LQT" == "no"; then
