--- a/Makefile.in
+++ b/Makefile.in
@@ -25,11 +25,12 @@ UIC=@UIC@
 
 UINAMES=CertDetail ExportKey_UI ExportCert_UI KeyDetail MainWindow_UI \
 	NewKey NewX509_UI PassRead PassWrite ReqDetail TrustState \
-	CertExtend ExportTinyCA_UI
+	CertExtend ExportTinyCA_UI CrlDetail
 
 MOCNAMES=ExportTinyCA NewX509 ExportKey MainWindow ExportCert $(UINAMES)
      
-MOBJS=MainWindowKeys.o MainWindowX509Req.o MainWindowX509.o MainWindowTemps.o  
+MOBJS=MainWindowKeys.o MainWindowX509Req.o MainWindowX509.o \
+      MainWindowTemps.o MainWindowCrl.o 
 OOBJS=$(patsubst %,moc_%.o,$(MOCNAMES)) $(patsubst %,%.o,$(MOCNAMES))
 
 OBJS=$(MOBJS) $(OOBJS) main.o
