*** empty log message ***

--- a/Makefile.in
+++ b/Makefile.in
@@ -27,7 +27,7 @@ UINAMES=CertDetail ExportKey_UI ExportCert_UI KeyDetail MainWindow_UI \
 	NewKey NewX509_UI PassRead PassWrite ReqDetail TrustState \
 	CertExtend ExportTinyCA_UI CrlDetail
 
-MOCNAMES=XcaListView KeyView ReqView ExportTinyCA NewX509 \
+MOCNAMES=XcaListView KeyView ReqView CertView TempView ExportTinyCA NewX509 \
 	 ExportKey MainWindow ExportCert $(UINAMES)
      
 MOBJS=
