--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -20,7 +20,7 @@ CFLAGS=-Wall @ac_DEBUG@
 PKINAMES=asn1int asn1time x509name pass_info \
 	pki_key pki_x509super pki_x509req pki_x509 \
 	pki_pkcs12 pki_temp pki_crl pki_pkcs7 \
-	db_base
+	db_base func 
 
 MOCNAMES=pki_base db_key db_x509super db_x509req db_x509 db_temp db_crl
 
