--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -17,7 +17,7 @@ CFLAGS=-Wall @ac_DEBUG@
 
 ##############################################
 
-PKINAMES=func asn1int asn1time x509name x509rev pass_info \
+PKINAMES=func asn1int asn1time x509name x509rev x509v3ext pass_info \
 	pki_key pki_x509super pki_x509req pki_x509 \
 	pki_pkcs12 pki_temp pki_crl pki_pkcs7 \
 	db_base
