Certificate creation works again, validity settings elaborated

--- a/Makefile.in
+++ b/Makefile.in
@@ -12,7 +12,7 @@ GCC=@CXX@
 CC=@CC@
 
 CPPFLAGS=-I. @CPPFLAGS@ @DEFS@ 
-CFLAGS=-Wall @ac_DEBUG@
+CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 
 LDFLAGS=-Llib @LDFLAGS@
 LIBS=@LIBS@ -lpki
