--- a/view/Makefile.in
+++ b/view/Makefile.in
@@ -16,7 +16,7 @@ AR=@AR@
 RANLIB=@RANLIB@
 
 CPPFLAGS=-I.. @CPPFLAGS@ @DEFS@
-CFLAGS=-Wall @ac_DEBUG@
+CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 
 ##############################################
 
