--- a/widgets/Makefile.in
+++ b/widgets/Makefile.in
@@ -20,12 +20,13 @@ CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 
 ##############################################
 
-NAMES= ExportCert ExportKey ExportTinyCA NewX509 CrlDetail CertDetail \
+MOC_NAMES= ExportCert ExportKey ExportTinyCA NewX509 CrlDetail CertDetail \
 	MainWindow validity distname ReqDetail
+NAMES=$(MOC_NAMES) NewX509_ext
 
-OBJS=$(patsubst %,moc_%.o,$(NAMES)) $(patsubst %,%.o,$(NAMES))
+OBJS=$(patsubst %,moc_%.o,$(MOC_NAMES)) $(patsubst %,%.o,$(NAMES))
 
-MOC_CPP=$(patsubst %,moc_%.cpp,$(NAMES))
+MOC_CPP=$(patsubst %,moc_%.cpp,$(MOC_NAMES))
 
 all: widgets.o
 
@@ -43,4 +44,4 @@ distclean: clean
 moc_%.cpp: %.h %.cpp
 	$(MOC) $< -o $@
 
-.SECONDARY: $(UI_CPP) $(UI_H) $(MOC_CPP)  
+.SECONDARY: $(MOC_CPP)  
