--- a/view/Makefile.in
+++ b/view/Makefile.in
@@ -20,7 +20,7 @@ CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 
 ##############################################
 
-NAMES= XcaListView KeyView ReqView TempView CertView #CrlView 
+NAMES= XcaListView KeyView ReqView TempView CertView CrlView 
 		
 
 OBJS=$(patsubst %,moc_%.o,$(NAMES)) $(patsubst %,%.o,$(NAMES)) main.o
