--- a/widgets/Makefile.in
+++ b/widgets/Makefile.in
@@ -21,7 +21,7 @@ CFLAGS=@ac_CC_WARN@ @ac_DEBUG@
 ##############################################
 
 MOC_NAMES= ExportCert ExportKey ExportTinyCA NewX509 CrlDetail CertDetail \
-	MainWindow validity distname ReqDetail clicklabel ImportMulti
+	MainWindow validity distname ReqDetail clicklabel #ImportMulti
 
 NAMES=$(MOC_NAMES) NewX509_ext
 
